@@ -1,3 +1,9 @@
+2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>
+
+ * configure:
+ * AssemblyInfo.cs:
+ * AspNetEdit.addin.xml: Bump MD version.
+
 2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* AspNetEdit.mdp: Flush project format changes.
